refraactor(backend.modules):eliminate the necessary code smells